--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-typical": "^0.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
