--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,12 +8,15 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "google-maps-react": "^2.0.6",
+    "mapbox-gl": "^2.8.0",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-google-maps": "^9.4.5",
+    "react-map-gl": "^7.0.10",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.0.0-rc.3",
     "react-typical": "^0.1.3",
     "web-vitals": "^2.1.4"
   },
